[gd_scene load_steps=2 format=3 uid="uid://r30ih7dtx1uo"]

[ext_resource type="Script" uid="uid://dmpm4vrmag0ru" path="res://addons/simplegrasstextured/gui/domain_range.gd" id="1_xiopc"]

[node name="DomainRange" type="Control"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_xiopc")

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
caret_blink = true

[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
